// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> should allow to be used with a FieldControl 1`] = `
<div>
  <label
    class="junipero label invalid"
    for="name"
  >
    Name
  </label>
  <div
    class="junipero text-field dirty invalid"
  >
    <input
      class="field"
      id="name"
      placeholder="Name"
      type="text"
      value="John"
    />
  </div>
  <div
    class="junipero abstract invalid"
  >
    Enter your name
  </div>
</div>
`;

exports[`<TextField /> should allow to reset the field 1`] = `
<div>
  <div
    class="junipero text-field dirty valid"
  >
    <input
      class="field"
      type="text"
      value="Jane"
    />
  </div>
</div>
`;

exports[`<TextField /> should allow to reset the field 2`] = `
<div>
  <div
    class="junipero text-field pristine valid"
  >
    <input
      class="field"
      type="text"
      value="John"
    />
  </div>
</div>
`;

exports[`<TextField /> should be invalid if validation fails 1`] = `
<div>
  <div
    class="junipero text-field dirty invalid"
  >
    <input
      class="field"
      placeholder="Name"
      type="text"
      value="John"
    />
  </div>
</div>
`;

exports[`<TextField /> should not allow to change value when disabled 1`] = `
<div>
  <div
    class="junipero text-field pristine valid empty disabled"
  >
    <input
      class="field"
      disabled=""
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`<TextField /> should render 1`] = `
<div>
  <div
    class="junipero text-field pristine valid empty"
  >
    <input
      class="field"
      placeholder="Name"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`<TextField /> should render a textarea if rows is set to > 1 1`] = `
<div>
  <div
    class="junipero text-field pristine valid empty"
  >
    <textarea
      class="field"
      rows="2"
    />
  </div>
</div>
`;
